[gd_scene load_steps=14 format=3 uid="uid://bdlukl6b1kr58"]

[ext_resource type="Script" uid="uid://dhcbqduagqeh5" path="res://Scenes/UI/world.gd" id="1_vkwxu"]
[ext_resource type="TileSet" uid="uid://bws6a6w1ivdry" path="res://tiles.tres" id="2_10fdo"]
[ext_resource type="Script" uid="uid://bapdojbfs38d0" path="res://Scenes/Maps/layerholder.gd" id="2_vqw1s"]
[ext_resource type="Script" uid="uid://y4bgq0oj611h" path="res://Scenes/Maps/selection.gd" id="3_5resf"]
[ext_resource type="Script" uid="uid://dulwvofohey24" path="res://Scenes/UI/Controls/control.gd" id="3_xrpyk"]
[ext_resource type="Script" uid="uid://40ohoph0e4bp" path="res://Scenes/UI/EntityUI/EntityNodes/Units.gd" id="4_hnyq6"]
[ext_resource type="Script" uid="uid://cwb8047jdshfq" path="res://Scenes/UI/Controls/button.gd" id="4_j5xhu"]
[ext_resource type="PackedScene" uid="uid://c3fxgtfgclo04" path="res://Scenes/UI/ActionMenu/actionMenu.tscn" id="5_ymabw"]
[ext_resource type="PackedScene" uid="uid://dujclmvvguvt6" path="res://Astar2Grid.tscn" id="8_hqvw0"]
[ext_resource type="PackedScene" uid="uid://m7vfqn5u4rwb" path="res://Scenes/UI/Logs/LogContainer.tscn" id="9_yj4n1"]
[ext_resource type="PackedScene" uid="uid://dbbaa0vkp2bc2" path="res://Scenes/ActLayout/LayoutMap.tscn" id="11_0u0od"]

[sub_resource type="Theme" id="Theme_vd5pf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34cot"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0, 0, 0, 1)

[node name="World" type="Node2D"]
script = ExtResource("1_vkwxu")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-9.09495e-13, 0)
scale = Vector2(-0.0348821, -0.0747021)
anchor_mode = 0

[node name="Layerholder" type="Node2D" parent="."]
script = ExtResource("2_vqw1s")

[node name="selection" type="TileMapLayer" parent="Layerholder"]
tile_set = ExtResource("2_10fdo")
script = ExtResource("3_5resf")

[node name="Astar2Grid" parent="." instance=ExtResource("8_hqvw0")]

[node name="Units" type="Node2D" parent="."]
script = ExtResource("4_hnyq6")

[node name="PlayerUnits" type="Node2D" parent="Units"]

[node name="EnemyUnits" type="Node2D" parent="Units"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_xrpyk")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(0, 325)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -95.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_vd5pf")
theme_override_styles/panel = SubResource("StyleBoxFlat_34cot")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/PanelContainer"]
layout_mode = 2
alignment = 2

[node name="ActionMenu" parent="CanvasLayer/Control/PanelContainer/HBoxContainer" instance=ExtResource("5_ymabw")]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="EnemyForesight" type="Button" parent="CanvasLayer/Control/PanelContainer/HBoxContainer/VBoxContainer"]
layout_direction = 3
layout_mode = 2
size_flags_vertical = 3
text = "View Enemy
Actions"

[node name="EndTurn" type="Button" parent="CanvasLayer/Control/PanelContainer/HBoxContainer/VBoxContainer"]
layout_direction = 3
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "YOOOH"
keep_pressed_outside = true
text = "End Turn"
script = ExtResource("4_j5xhu")

[node name="LogContainer" parent="CanvasLayer" instance=ExtResource("9_yj4n1")]
offset_left = -421.0
offset_top = -487.0
offset_right = -21.0
offset_bottom = -362.0

[node name="LayoutMap" parent="." instance=ExtResource("11_0u0od")]
visible = false

[connection signal="button_down" from="CanvasLayer/Control/PanelContainer/HBoxContainer/VBoxContainer/EnemyForesight" to="Units" method="_on_enemy_foresight_button_down"]
[connection signal="button_up" from="CanvasLayer/Control/PanelContainer/HBoxContainer/VBoxContainer/EnemyForesight" to="Units" method="_on_enemy_foresight_button_up"]
